<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Rectangle 25 -->
        <View
            android:id="@+id/rectangle8"
            android:layout_width="331dp"
            android:layout_height="212dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="25dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="168dp"
            android:background="@drawable/rectangle_8" />


        <!-- Rectangle 26 -->
        <View
            android:id="@+id/rectangle9"
            android:layout_width="340dp"
            android:layout_height="218dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="25dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="401dp"
            android:background="@drawable/rectangle_9" />


        <!-- Peter Njoroge -->
        <TextView
            android:id="@+id/peter_njoro"
            android:layout_width="243dp"
            android:layout_height="43dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="92dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="253dp"
            android:text="@string/peter_njoro"
            android:textAppearance="@style/peter_njoro"
            android:gravity="top" />


        <!-- You -->
        <TextView
            android:id="@+id/you"
            android:layout_width="210dp"
            android:layout_height="45dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="163dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="495dp"
            android:text="@string/you"
            android:textAppearance="@style/you"
            android:gravity="top" />



        <!-- Time -->
        <TextView
            android:id="@+id/time"
            android:layout_width="22dp"
            android:layout_height="11dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="325dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="71dp"
            android:text="@string/time"
            android:textAppearance="@style/time"
            android:gravity="top" />



        <!-- 30min -->
        <TextView
            android:id="@+id/min"
            android:layout_width="38dp"
            android:layout_height="15dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="325dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="83dp"
            android:text="@string/min"
            android:textAppearance="@style/min"
            android:gravity="top"
            />



        <!-- Iconsax/Bulk/timerstart -->
        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/iconsax_bul"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="278dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="66dp"
            android:clipToOutline="true"
            android:background="@drawable/iconsax_bul" />

        <!-- LOWER BAR & BG -->
        <View
            android:id="@+id/lower_bar_b"
            android:layout_width="390dp"
            android:layout_height="90.4dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="-6dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="732dp"
            android:background="#DF0C0C" />

        <!-- Get started -->
        <TextView
            android:id="@+id/get_started"
            android:layout_width="67dp"
            android:layout_height="15dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="161dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="666dp"
            android:text="@string/get_started"
            android:textAppearance="@style/get_started"
            android:gravity="top" />


        <!-- March 24, 2023 -->
        <TextView
            android:id="@+id/march_24_20"
            android:layout_width="137dp"
            android:layout_height="22dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="90dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="76dp"
            android:text="@string/march_24_20"
            android:textAppearance="@style/march_24_20"
            android:gravity="top" />


        <!-- Status-Bar 1 -->
        <View
            android:id="@+id/status_bar_"
            android:layout_width="378dp"
            android:layout_height="25dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="110dp"
            android:background="@drawable/status_bar6" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>