<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/drawable_booksession">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Ellipse 1 -->
        <TextView
            android:id="@+id/would_you_l"
            android:layout_width="270dp"
            android:layout_height="144dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="42dp"
            android:layout_marginTop="109dp"
            android:gravity="top"
            android:text="@string/would_you_l"
            android:textAppearance="@style/would_you_l" />


        <!-- Would you like to book a session? -->
        <TextView
            android:id="@+id/this_is_you"
            android:layout_width="274dp"
            android:layout_height="32dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="36dp"
            android:layout_marginTop="287dp"
            android:gravity="top"
            android:text="@string/this_is_you"
            android:textAppearance="@style/this_is_you" />


        <!-- This is your private area with all the tools you need to customized for you -->
        <TextView
            android:id="@+id/mindsafe_de"
            android:layout_width="208dp"
            android:layout_height="34dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="42dp"
            android:layout_marginTop="63dp"
            android:gravity="top"
            android:text="@string/mindsafe_de"
            android:textAppearance="@style/mindsafe_de" />

        <!-- Mindsafe details -->
        <View
            android:id="@+id/ellipse_1"
            android:layout_width="191dp"
            android:layout_height="189dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="110dp"
            android:layout_marginTop="3dp"
            android:background="@drawable/drawable_ellipse" />


        <!-- BIO PSYCH -->
        <View
            android:id="@+id/bio_prof1"
            android:layout_width="350.2dp"
            android:layout_height="88dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="21dp"
            android:layout_marginTop="354dp"
            android:background="@drawable/biopsych4" />


        <!-- BIO PSYCH -->
        <View
            android:id="@+id/bio_prof2"
            android:layout_width="350.2dp"
            android:layout_height="88dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="460dp"
            android:background="@drawable/biopsych2" />


        <!-- BIO PSYCH -->
        <View
            android:id="@+id/bio_prof3"
            android:layout_width="350.2dp"
            android:layout_height="88dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="566dp"
            android:background="@drawable/biopsych3" />


        <!-- BIO PSYCH -->
        <View
            android:id="@+id/bio_prof4"
            android:layout_width="350.2dp"
            android:layout_height="88dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="679dp"
            android:background="@drawable/biopsych4" />


        <!-- Status-Bar 1 -->
        <View
            android:id="@+id/status_bar_"
            android:layout_width="378dp"
            android:layout_height="25dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="-9dp"
            android:background="@drawable/drawable_statusbar" />


    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
